--- a/src/WebsiteHeader.css
+++ b/src/WebsiteHeader.css
@@ -1,7 +1,7 @@
 .website-header {
-  margin-left: -0.4%;
-  margin-top: -0.4%;
-  margin-right: -0.4%;
+  margin-left: -2.0%;
+  margin-top: -0.5%;
+  margin-right: -2.0%;
   padding-top: 0.5%;
   padding-left: 20%;
   padding-bottom: 1%;
@@ -12,4 +12,10 @@
 .terminalText {
   font-size: 75%;
   line-height: 50%;
+}
+
+@media screen and (max-width: 600px) {
+  .website-header {
+    display: none;
+  }
 }
